--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
       - key: PGSQL_HOST
         value: "dpg-crcip9rv2p9s73cgisig-a"
       - key: PGSQL_DB
-        value: "alumnosueb-db"
+        value: "alumnosueb"
       - key: PGSQL_USER
         value: "root"
       - key: PGSQL_PASSWORD
