--- a/render.yaml
+++ b/render.yaml
@@ -6,11 +6,11 @@ services:
     plan: free
     autoDeploy: true
     envVars:
-  - key: PGSQL_HOST
-    value: "dpg-crhhb8g8fa8c7392m6o0-a.oregon-postgres.render.com"
-  - key: PGSQL_DB
-    value: "prueba_bgqe"
-  - key: PGSQL_USER
-    value: "root"
-  - key: PGSQL_PASSWORD
-    value: "VN0adU5Mx2ob7bsPJl1YA6EXsshxat3P"
+      - key: PGSQL_HOST
+        value: "dpg-crk3m75ds78s73ei81gg-a.oregon-postgres.render.com"
+      - key: PGSQL_DB
+        value: "alumnosueb_zhn4"
+      - key: PGSQL_USER
+        value: "root"
+      - key: PGSQL_PASSWORD
+        value: "Tas5ts3uuW308ocoCuOvmzdBiZ7DGKiO"
